Добавил ссылку на репозиторий GitHub

--- a/Project Beta-Bank.ipynb
+++ b/Project Beta-Bank.ipynb
@@ -31,6 +31,8 @@
     "- **AUC-ROC модели: 0.861**.\n",
     "\n",
     "Результаты превосходят значения, полученные при первой сдаче проекта. На основе матрицы спутанности можно сделать вывод, что модель истинно положительно отвечает в 70% случаях и истинно отрицательно в 86%.\n",
+    "    \n",
+    "**Ссылка на репозиторий: https://github.com/Duck163/supervised_learning**\n",
     "    </div>"
    ]
   },
