Удалены модели с применением downsampling ввиду малой эффективности данного метода

--- a/Project Beta-Bank.ipynb
+++ b/Project Beta-Bank.ipynb
@@ -24835,319 +24835,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Downsampling\n",
-    "\n",
-    "Upsampling - удаление части наибльшего класса. Преобразование проходит в несколько этапов:\n",
-    "- Разделить обучающую выборку на отрицательные и положительные объекты;\n",
-    "- Случайным образом отбросить часть из отрицательных объектов;\n",
-    "- С учётом полученных данных создать новую обучающую выборку;\n",
-    "- Перемешать данные. Положительные не должны идти следом за отрицательными: алгоритмам будет сложнее обучаться.\n",
-    "\n",
-    "Напишем функцию выполняющую данное преобразование."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Создаем функцию преобразования downsampling\n",
-    "def downsample(features, target, fraction):\n",
-    "    features_zeros = features[target == 0]       # Выбираем признаки с целевым значением 0\n",
-    "    features_ones = features[target == 1]        # Выбираем признаки с целевым значением 0\n",
-    "    target_zeros = target[target == 0]           # Выбираем целевой признак равный 0\n",
-    "    target_ones = target[target == 1]            # Выбираем целевой признак равный 0\n",
-    "\n",
-    "    # Соединяем оба класса с учетом уменьшения наибольшего класса\n",
-    "    features_downsampled = pd.concat(\n",
-    "        [features_zeros.sample(frac=fraction, random_state=42)] + [features_ones])\n",
-    "    target_downsampled = pd.concat(\n",
-    "        [target_zeros.sample(frac=fraction, random_state=42)] + [target_ones])\n",
-    "    # Перемешиваем данные\n",
-    "    features_downsampled, target_downsampled = shuffle(\n",
-    "        features_downsampled, target_downsampled, random_state=42)\n",
-    "    # Возвращаем перемешанные данные на выход\n",
-    "    return features_downsampled, target_downsampled"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Получаем преобразованные признаки\n",
-    "features_downsampled, target_downsampled = downsample(train_features, train_target, 0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n",
-      "D:\\anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1523: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Наилучшая f1-мера логистической регрессии на сбалансированной валидационной выборке: 0.5014245014245015,\n",
-      "ROC-AUC модели: 0.764066431238929.\n",
-      "Модель имеет следующие гиперпараметры:\n",
-      "Количество иттераций: 100,\n",
-      "Лучший метод: liblinear\n",
-      "Wall time: 10.7 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "# Задаем начальные параметры для выявления гиперпараметров лучшей модели\n",
-    "best_logistic_model_d = None\n",
-    "best_logistic_result_d = 0\n",
-    "best_logistic_roc_d = 0\n",
-    "best_logistic_iter = 0\n",
-    "best_solver = None\n",
-    "solver1 = ['lbfgs', 'liblinear', 'newton-cg'] \n",
-    "solver2 = ['sag', 'saga']\n",
-    "\n",
-    "# Создаем цикл поиска лучшей модели на валидационной выборке\n",
-    "for solv in solver1:                         # Цикл по перебору решателей\n",
-    "    for iter in range(100, 1001, 100):       # Цикл по перебору числа иттераций\n",
-    "        # Создаем модель логистической регрессии\n",
-    "        model_logistic_d = LogisticRegression(solver=solv, max_iter=iter,                                             \n",
-    "                                             random_state=42, n_jobs=-1)\n",
-    "        model_logistic_d.fit(features_downsampled, target_downsampled)     # Обучаем модель\n",
-    "        prediction_logistic_d = model_logistic_d.predict(valid_features)   # Предсказываем данные моделью\n",
-    "        result_d = f1_score(valid_target, prediction_logistic_d)     # Считаем точность предсказаний модели\n",
-    "        probabilities_logistic_d = model_logistic_d.predict_proba(valid_features)[:,1] # Вероятность для ROC-AUC\n",
-    "        roc_logistic_d = roc_auc_score(valid_target, probabilities_logistic_d) # Считаем метрику ROC-AUC модели\n",
-    "        # Сравниваем результат модели с лучшим результатом и при превышении результатов сохраняем модель с гиперпараметрами\n",
-    "        if result_d > best_logistic_result_d:\n",
-    "            best_logistic_model_d = model_logistic_d\n",
-    "            best_logistic_result_d = result_d\n",
-    "            best_logistic_roc_d = roc_logistic_d\n",
-    "            best_logistic_iter = iter\n",
-    "            best_solver = solv\n",
-    "\n",
-    "# Создаем второй цикл с решателями, требующими большого количества иттераций\n",
-    "for solv in solver2:                         # Цикл по перебору решателей\n",
-    "    for iter in range(5000, 100001, 5000):   # Цикл по перебору числа иттераций\n",
-    "        model_logistic_d = LogisticRegression(solver=solv, max_iter=iter, \n",
-    "                                              random_state=42, n_jobs=-1)\n",
-    "        model_logistic_d.fit(features_downsampled, target_downsampled)     # Обучаем модель\n",
-    "        prediction_logistic_d = model_logistic_d.predict(valid_features)   # Предсказываем данные моделью\n",
-    "        result_d = f1_score(valid_target, prediction_logistic_d)           # Считаем метрику f1 модели\n",
-    "        probabilities_logistic_d = model_logistic_d.predict_proba(valid_features)[:,1] # Вероятность для ROC-AUC\n",
-    "        roc_logistic_d = roc_auc_score(valid_target, probabilities_logistic_d) # Считаем метрику ROC-AUC модели\n",
-    "        # Сравниваем результат модели с лучшим результатом и при превышении результатов сохраняем модель с гиперпараметрами\n",
-    "        if result_d > best_logistic_result_d:\n",
-    "            best_logistic_model_d = model_logistic_d\n",
-    "            best_logistic_result_d = result_d\n",
-    "            best_logistic_roc_d = roc_logistic_d\n",
-    "            best_logistic_iter = iter\n",
-    "            best_solver = solv\n",
-    "            \n",
-    "print(f'Наилучшая f1-мера логистической регрессии на сбалансированной валидационной выборке: {best_logistic_result_d},')\n",
-    "print(f'ROC-AUC модели: {best_logistic_roc_d}.')\n",
-    "print(f'Модель имеет следующие гиперпараметры:')\n",
-    "print(f'Количество иттераций: {best_logistic_iter},')\n",
-    "print(f'Лучший метод: {best_solver}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Наилучший результат модели логистической регрессии с устранением дисабаланса методом downsampling имеет значения метрик аналогичные остальным методам, результаты на валидационной выборке:\n",
-    "- F1-мера: **0.50**, на треть лучше несбалансированной модели, но все равно является недопустимым для успешной сдачи проекта;\n",
-    "- ROC-AUC: **0.76**, данный результат не изменился от преобразования downsampling.\n",
-    "\n",
-    "Время обучения и подбора оптимальных гиперпараметров составило 1 секунда. Для данной модели используются аналогичные предыдущим гиперпараметры:\n",
-    "- solver = lbfgs; \n",
-    "- max_iter = 100."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Наилучшая метрика F1 дерева решений на валидационной выборке: 0.569937369519833,\n",
-      "метрика ROC-AUC: 0.8334198323423555.\n",
-      "Модель имеет следующие гиперпараметры:\n",
-      "Глубина дерева: 6,\n",
-      "Критерий: entropy,\n",
-      "Минимальное количество объектов в листе: 1\n",
-      "Wall time: 6.31 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# Задаем начальные параметры для выявления гиперпараметров лучшей модели\n",
-    "best_tree_model_d = None\n",
-    "best_tree_result_d = 0\n",
-    "best_tree_roc_d = 0\n",
-    "best_tree_depth = 0\n",
-    "best_criteries = None\n",
-    "criteries = ['gini', 'entropy']\n",
-    "\n",
-    "# Создаем цикл поиска лучшей модели на валидационной выборке\n",
-    "for criterion in criteries:           # Цикл по перебору критериев\n",
-    "    for depth in range(1,13):         # Цикл по перебору максимальной глубины дерева\n",
-    "        for leaf in range(1, 10):     # Цикл по перебору минимального количества листьев\n",
-    "            # Создаем модель дерево решений\n",
-    "            model_tree_d = DecisionTreeClassifier(criterion=criterion, max_depth=depth, \n",
-    "                                                  random_state=42, min_samples_leaf=leaf)\n",
-    "            model_tree_d.fit(features_upsampled, target_upsampled)      # Обучаем модель\n",
-    "            prediction_tree_d = model_tree_d.predict(valid_features)    # Предсказываем данные моделью\n",
-    "            result_d = f1_score(valid_target, prediction_tree_d)        # Считаем метрику f1 модели\n",
-    "            probabilities_tree_d = model_tree_d.predict_proba(valid_features)[:,1] # Вероятность для ROC-AUC\n",
-    "            roc_tree_d = roc_auc_score(valid_target, probabilities_tree_d) # Считаем метрику ROC-AUC модели\n",
-    "# Сравниваем результат модели с лучшим результатом и при превышении результатов сохраняем модель с гиперпараметрами\n",
-    "            if result_d > best_tree_result_d:\n",
-    "                best_tree_model_d = model_tree_d\n",
-    "                best_tree_result_d = result_d\n",
-    "                best_tree_roc_d = roc_tree_d\n",
-    "                best_tree_depth = depth\n",
-    "                best_tree_criteries = criterion\n",
-    "                best_tree_leaf = leaf\n",
-    "                \n",
-    "print(f'Наилучшая метрика F1 дерева решений на валидационной выборке: {best_tree_result_d},')\n",
-    "print(f'метрика ROC-AUC: {best_tree_roc_d}.')   \n",
-    "print(f'Модель имеет следующие гиперпараметры:')\n",
-    "print(f'Глубина дерева: {best_tree_depth},')\n",
-    "print(f'Критерий: {best_tree_criteries},')\n",
-    "print(f'Минимальное количество объектов в листе: {best_tree_leaf}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Наилучший результат модели дерева решений с устранением дисабаланса методом downsampling имеет следующие значения метрик на валидационной выборке:\n",
-    "- F1-мера: **0.57**, результат аналогичен модели с добавлением весов классов и upsampling, и не выполняет условия для сдачи проекта;\n",
-    "- ROC-AUC: **0.83**, результат аналогичен модели с добавлением весов классов и upsampling.\n",
-    "\n",
-    "Время обучения и подбора оптимальных гиперпараметров составило 6 секунд. Для данной модели используются аналогичные upsampling гиперпараметры:\n",
-    "- criterion = entropy;\n",
-    "- max_depth = 6;\n",
-    "- min_samples_leaf = 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Наилучшая f1-мера случайного лес на валидационной выборке: 0.6291309669522643,\n",
-      "ROC_AUC: 0.8552457888145498\n",
-      "Модель имеет следующие гиперпараметры:\n",
-      "Количество деревьев: 100,\n",
-      "Глубина дерева: 11,\n",
-      "Критерий: gini,\n",
-      "Минимальное количество объектов в листе: 3.\n",
-      "Wall time: 31min 55s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# Задаем начальные параметры для выявления гиперпараметров лучшей модели\n",
-    "best_forest_model_d = None\n",
-    "best_forest_result_d = 0\n",
-    "best_forest_roc_d = 0\n",
-    "best_forest_depth = 0\n",
-    "best_forest_w = None\n",
-    "criteries = ['gini', 'entropy']\n",
-    "\n",
-    "# Создаем цикл поиска лучшей модели на валидационной выборке\n",
-    "for criterion in criteries:                         # Цикл по перебору критериев\n",
-    "    for depth in range(9, 13):                      # Цикл по перебору максимальной глубины дерева\n",
-    "        for number_of_trees in range(50, 200, 50):  # Цикл по перебору количества деревьев в ансамбле\n",
-    "            for leaf in range(2, 5):               # Цикл по перебору минимального количества листьев\n",
-    "                # Создаем модель случайного леса\n",
-    "                model_forest_d = RandomForestClassifier(n_estimators=number_of_trees, max_depth=depth,\n",
-    "                                                        n_jobs=-1, criterion=criterion, \n",
-    "                                                        min_samples_leaf=leaf, random_state=42)\n",
-    "                model_forest_d.fit(features_upsampled, target_upsampled)           # Обучаем модель\n",
-    "                prediction_forest_d = model_forest_d.predict(valid_features)       # Предсказываем данные моделью\n",
-    "                result_d = f1_score(valid_target, prediction_forest_d)             # Считаем метрику f1 модели\n",
-    "                probabilities_forest_d = model_forest_d.predict_proba(valid_features)[:,1] # Вероятность для ROC-AUC\n",
-    "                roc_forest_d = roc_auc_score(valid_target, probabilities_forest_d) # Считаем метрику ROC-AUC модели\n",
-    "# Сравниваем результат модели с лучшим результатом и при превышении результатов сохраняем модель с гиперпараметрами\n",
-    "                if result_d > best_forest_result_d:\n",
-    "                    best_forest_model_d = model_forest_d\n",
-    "                    best_forest_result_d = result_d\n",
-    "                    best_forest_roc_d = roc_forest_d\n",
-    "                    best_forest_depth = depth\n",
-    "                    best_number_of_forest = number_of_trees\n",
-    "                    best_forest_criteries = criterion\n",
-    "                    best_forest_leaf = leaf                    \n",
-    "\n",
-    "print(f'Наилучшая f1-мера случайного лес на валидационной выборке: {best_forest_result_d},')\n",
-    "print(f'ROC_AUC: {best_forest_roc_d}')\n",
-    "print(f'Модель имеет следующие гиперпараметры:')\n",
-    "print(f'Количество деревьев: {best_number_of_forest},')\n",
-    "print(f'Глубина дерева: {best_forest_depth},')\n",
-    "print(f'Критерий: {best_forest_criteries},')\n",
-    "print(f'Минимальное количество объектов в листе: {best_forest_leaf}.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Наилучший результат модели случайного леса с устранением дисабаланса методом downsampling имеет следующие значения метрик на валидационной выборке:\n",
-    "- F1-мера: **0.63**, что меньше модели с весами классов в 3 знаке после запятой. Также выполняет условия для успешной сдачи проекта;\n",
-    "- ROC-AUC: **0.86**, чуть меньше модели с весами классов в 3 знаке после запятой.\n",
-    "\n",
-    "Время обучения и подбора оптимальных гиперпараметров составило 28 минут. Для данной модели используются следующие гиперпараметры:\n",
-    "- criterion = gini;\n",
-    "- max_depth = 11;\n",
-    "- n_estimators = 100\n",
-    "- min_samples_leaf = 3."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Итоги устранения дисбаланса"
    ]
   },
@@ -25200,10 +24887,7 @@
     "print('')\n",
     "print('Преобразование upsampling')\n",
     "print('')\n",
-    "print(upsampling_table)\n",
-    "print('Преобразование downsampling')\n",
-    "print('')\n",
-    "print(downsampling_table)"
+    "print(upsampling_table)"
    ]
   },
   {
